--- a/wicca/Wicca.css
+++ b/wicca/Wicca.css
@@ -1,5 +1,5 @@
   body {
-		background-image: url("./stonehenge.jpeg");
+		background-image: url("stonehenge.jpeg");
 		background-repeat: no-repeat;
 		background-size: cover;
 
