--- a/wicca/wicca2.css
+++ b/wicca/wicca2.css
@@ -1,5 +1,5 @@
 body {
-		background-image: url("./moon.jpg");
+		background-image: url("moon.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 
